# git-semver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  cliff.toml
src/: cli.rs  cli_test.rs  main.rs  utils.rs  utils_test.rs
